# checkrpmkeys

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  release.yml
src/: app.rs  cli.rs  data.rs  i18n.rs  main.rs  ui.rs
