[package]
name = "checkrpmkeys"
version = "0.3.0"
edition = "2024"
authors = ["rawar089"]
license = "GPL-3"

[dependencies]
sequoia-openpgp = "2.4.1"
chrono = "0.4.45"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.33"
clap = { version = "4.6.2", features = ["derive"] }
ratatui = "0.30.2"
crossterm = "0.29"
anyhow = "1"
